[package]
name = "tattoo"
version = "0.1.0"
authors = ["Rudolf Müller rudolfmullercz@gmail.com"]
edition = "2024"
license = "MIT"
description = "Low-level Rust TUI/CUI library"
repository = "https://github.com/rudolfmuller/tattoo.git"
readme = "README.md"
keywords = ["tui", "cui", "terminal", "rust"]
categories = ["command-line-utilities", "terminal"]

[dependencies]
termion = "4.0.6"
